# DidacticalEnigma.Next/Models/ProgramConfigurationSetRequest.cs
@@ -1,6 +1,10 @@
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+
 namespace DidacticalEnigma.Next.Models;
 
 public class ProgramConfigurationSetRequest
 {
-    
+    [Required]
+    public IReadOnlyCollection<object> DataSourceGridLayouts { get; set; }
 }
